[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/ui_panel.png" type="Texture" id=1]
[ext_resource path="res://fonts/munro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/suspect_lilac_face.png" type="Texture" id=3]
[ext_resource path="res://Scenes/EndScreen.gd" type="Script" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 46, 46 )
margin_left = 15.0
margin_right = 15.0
margin_top = 15.0
margin_bottom = 15.0

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=4]
antialiased = false
font_path = "res://fonts/munro.ttf"

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = SubResource( 4 )

[node name="EndScreen" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultLabel" type="Label" parent="VBox"]
margin_right = 1024.0
margin_bottom = 113.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "YOU HAVE SUCCEEDED!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_top = 117.0
margin_right = 1024.0
margin_bottom = 319.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MurdererImage" type="TextureRect" parent="VBox/HBox"]
margin_right = 510.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 6

[node name="WeaponImage" type="TextureRect" parent="VBox/HBox"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 6

[node name="ExplanationLabel" type="Label" parent="VBox"]
margin_top = 390.0
margin_right = 1024.0
margin_bottom = 458.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "It was Governess Gold with the Wrench!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLabel" type="Label" parent="VBox"]
margin_top = 529.0
margin_right = 1024.0
margin_bottom = 575.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Press \"ESC\" to restart."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
